// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactTestRenderer should support ReactDOM portal usage 1`] = `
<div>
  Object {
    "children": Array [
      Object {
        "children": Array [
          "Rendered by ReactDOM",
        ],
        "props": Object {},
        "type": "Symbol(react.element)",
      },
    ],
    "props": Object {},
    "type": "Symbol(react.portal)",
  }
</div>
`;

exports[`ReactTestRenderer should support ReactDOM portal usage 2`] = `
<div>
  Object {
    "children": Array [
      "Rendered by ReactTestRenderer",
    ],
    "props": Object {},
    "type": "Symbol(react.element)",
  }
  Object {
    "children": Array [
      Object {
        "children": Array [
          "Rendered by ReactDOM",
        ],
        "props": Object {},
        "type": "Symbol(react.element)",
      },
    ],
    "props": Object {},
    "type": "Symbol(react.portal)",
  }
</div>
`;
